--- a/CONFIGTEST-SERVER.properties
+++ b/CONFIGTEST-SERVER.properties
@@ -55,7 +55,7 @@ ribbon.MaxAutoRetriesNextServier=1
 
 #日志配置（根据实际生产环境修改对应的目录和文件名）
 #logging.file=D:\\microservername.log
-logging.level.root=INFOa
+logging.level.root=INFOab
 logging.level.org.hibernate=INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicExtractory=TRACE
