--- a/CONFIGTEST-SERVER.properties
+++ b/CONFIGTEST-SERVER.properties
@@ -60,3 +60,5 @@ logging.level.org.hibernate=INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicExtractory=TRACE
 logging.level.com.itmuch.youran.persistence=ERROR
+
+profile=1234
