--- a/CONFIGTEST-SERVER.properties
+++ b/CONFIGTEST-SERVER.properties
@@ -61,4 +61,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicExtractory=TRACE
 logging.level.com.itmuch.youran.persistence=ERROR
 
-profile=1234
+profile=12345678
