--- a/YDZYTEST-dev.properties
+++ b/YDZYTEST-dev.properties
@@ -73,4 +73,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicExtractory=TRACE
 logging.level.com.itmuch.youran.persistence=ERROR
 #测试config是否好用
-spring.config.test=1234567889
+spring.config.test=1234
