--- a/ZUUL-dev.properties
+++ b/ZUUL-dev.properties
@@ -39,6 +39,6 @@ zuul.routes.sguap.path=/*lbuap/**
 zuul.routes.sguap.service-id=springboot-microserver-lbtest
 zuul.routes.sguap.stripPrefix=false
 
-zuul.routes.test.path=/test/**
+zuul.routes.test.path=/test1234/**
 zuul.routes.test.service-id=YDZYTEST
 zuul.routes.test.stripPrefix=false
