--- a/YDZYTEST-dev.properties
+++ b/YDZYTEST-dev.properties
@@ -73,6 +73,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicExtractory=TRACE
 logging.level.com.itmuch.youran.persistence=ERROR
 #测试config是否好用
-spring.config.test=12345
+spring.config.test=12345ztmagic
 spring.isc.test=1234
 spring.isc.test1=5678
