--- a/test-dev.properties
+++ b/test-dev.properties
@@ -1,3 +1,3 @@
-spring.isc.test=wocacacacc
-spring.isc.test1=jdjsdsjdssd
-spring.isc.test2=shdsdjhsdgshdgjsgd
+spring.isc.test=tianfuxingming
+spring.isc.test1=jsdffgg
+spring.isc.test2=svhgkdhgkjdhgjdhjgdgdhg
